# WebOfDoom

./: .gitignore  LICENSE  README.md  pyproject.toml
src/webofdoom/: Worker.py  main.py
