[tool.poetry]
name = "webofdoom"
version = "0.0.1"
description = "Website and API endpoint bruteforcer."
authors = ["Kleo Hasani"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[tool.poetry.scripts]
start = "src.webofdoom.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0", "click>=8.0.0"]
build-backend = "poetry.core.masonry.api"
